--- a/about.html
+++ b/about.html
@@ -5,9 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JPCW about me</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <link href="styles.css" rel="stylesheet">
+  <link href="src/styles.css" rel="stylesheet">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg custom-navbar">
+    <div class="container-fluid">
+      <img src="/imgs/2025 logo.png" alt="JP Creative Works Logo" width="72" height="48" class="d-inline-block align-text-top">
+      <a class="navbar-brand" href="/">JP Creative Works</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/about.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html#contactme">Contact Me</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <header></header>
   <main>
     <div>
