added welcome and icon links, styled on homepage, added banner image as header

--- a/index.html
+++ b/index.html
@@ -34,11 +34,51 @@
       </div>
     </div>
   </nav>
-  <header></header>
+  <header>
+    <div class="container-fluid px-0">
+      <img src="/imgs/JPCW BANNER-02.png" alt="JP Creative Works Pride Banner" class="img-fluid w-100">
+    </div>  
+  </header>
   <main>
-    <div>
-      <h1>JPCW Home</h1>
-    </div>
+    <section class="welcome-intro py-5">
+      <div class="container text-center">
+        <h1 class="display-4 fw-bold mb-4">Welcome to JP Creative Works</h1>
+        <p class="lead">
+          <strong>JP Creative Works</strong> is your one-stop destination for inspired digital media. Since 2011, specializing in 
+          <em>graphic design</em>, <em>photography</em>, <em>videography</em>, and <em>web development</em> — helping creators, professionals, and small businesses bring their vision to life. Whether you're building a brand, capturing a story, or launching your next big idea, JP Creative Works combines creative artistry and technical expertise to make it happen.  
+          <br><br>
+          <strong>Start exploring below</strong> to see how we turn imagination into reality.
+        </p>
+      </div>
+    </section>
+    <section class="link-section py-5">
+      <div class="container">
+        <div class="row text-center g-4">
+          <!-- About Me -->
+          <div class="col-12 col-md-4">
+            <a href="/about.html" class="link-img d-block">
+              <img src="/imgs/about me.png" alt="About Me" class="img-fluid rounded shadow">
+              <a class="text-white text-decoration-none link-text" href="/about.html">About</a>
+            </a>
+            
+          </div>
+          <!-- Portfolio -->
+          <div class="col-12 col-md-4">
+            <a href="/portfolio.html" class="link-img d-block">
+              <img src="/imgs/portfolio.png" alt="Portfolio" class="img-fluid rounded shadow">
+              <a class="text-white text-decoration-none link-text" href="/portfolio.html">Portfolio</a>
+            </a>
+          </div>
+          <!-- Contact Me -->
+          <div class="col-12 col-md-4">
+            <a href="/about.html#contactme" class="link-img d-block">
+              <img src="/imgs/contact me.png" alt="Contact Me" class="img-fluid rounded shadow">
+              <a class="text-white text-decoration-none link-text" href="/about.html#contact">Contact</a>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
