--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JPCW Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
   <link href="src/styles.css" rel="stylesheet">
 
 </head>
@@ -80,7 +82,26 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <footer class="site-footer py-4 mt-3">
+  <div class="container text-center text-white">
+    <p class="mb-2">Connect with JP Creative Works</p>
+      <div class="social-links mb-3">
+        <a href="https://github.com/jpcreativeworks/JPCW" target="_blank" class="footer-link me-3" title="GitHub">
+          <i class="bi bi-github"></i>
+        </a>
+        <a href="https://www.instagram.com/jpcreativeworks/" target="_blank" class="footer-link me-3" title="Instagram">
+          <i class="bi bi-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/jpcreativeworks" target="_blank" class="footer-link me-3" title="Facebook">
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/jpgraphics011/" target="_blank" class="footer-link me-3" title="LinkedIn">
+          <i class="bi bi-linkedin"></i>
+        </a>
+      </div>
+      <p class="mb-0 small">© 2025 JP Creative Works • Designed & Coded by <a href="https://github.com/jpcreativeworks" target="_blank" class="footer-link me-3">Jenn Bencriscutto</a></p>
+  </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
