updated about me page with css styling and responsiveness

--- a/about.html
+++ b/about.html
@@ -38,7 +38,62 @@
   <header></header>
   <main>
     <div>
-      <h1>JPCW about me</h1>
+      <!-- About Me Section -->
+<section class="about-section py-5" id="about-me">
+  <div class="container">
+    <div class="row">
+      <!-- Image -->
+      <div class="col-md-5 text-center text-md-start mb-4 mb-md-0">
+        <img src="/imgs/_D4C3702 2.jpg" alt="Photo of Jenn Bencriscutto" class="img-fluid rounded shadow">
+      </div>
+      <!-- Text -->
+      <div class="col-md-7">
+        <h2 class="fw-bold mb-3">About JPCW</h2>
+        <p>Hi, I’m Jenn Bencriscutto — the creative force behind JP Creative Works.</p>
+        <p>I believe design should do more than look good — it should make you feel something.</p>
+        <p>Whether it’s a teacher navigating a new training video, a small business owner discovering their brand identity, or a superintendent trusting me with a time-sensitive district presentation, my mission is always the same: to bring your vision to life with care, precision, and passion.</p>
+        <p>With years of experience rooted in multimedia design, instructional storytelling, and branding, I’ve built a career that bridges creativity with purpose. My background includes everything from developing interactive training modules for the Tucson Unified School District to designing logos and websites for small businesses across North America. I specialize in taking complex ideas and making them feel clear, beautiful, and easy to understand — whether that’s through motion graphics, intuitive web layouts, or emotionally compelling video edits.</p>
+        <p>But let me tell you a bit more than just the bullet points.</p>
+        <p>I got into this field not just because I could design — but because I felt things deeply. I noticed the gap between ideas and expression. People had dreams, but not always the tools to show the world what they were capable of. That’s where I come in. I work with people — not just projects — to understand the why behind the work. Then I obsess over the how until every piece feels just right.</p>
+        <p>My clients trust me with their ideas, their deadlines, and their reputations. Why? Because I don’t clock in and out of creativity. I live it. I breathe it. I lose track of time in it. Whether I’m animating a character, crafting a policy explainer video, or coding a responsive web page, I give everything I’ve got. I treat every project like it matters — because it does.</p>
+        <p>And if you’re here, that means your project matters too.</p>
+        <p>So if you're looking for someone who will listen closely, design intentionally, and never treat your project like “just another job” — welcome. You’re in the right place.</p>
+        <p>Let’s build something beautiful together.</p>
+        <h3>– Jenn Bencriscutto</h3><p>Founder & Creative Director<br /></p>
+JP Creative Works</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact Me Section -->
+<section class="contact-section py-5 text-white" id="contactme">
+  <div class="container text-center">
+    <img src="/imgs/contact me.png" alt="Contact Me" class="img-fluid mb-4" style="max-width: 200px;">
+    <h2 class="mb-4">Get in Touch</h2>
+    <form action="https://formsubmit.co/jp.graphics.011@gmail.com" method="POST">
+      <div class="mb-3">
+        <label for="name" class="form-label">Your Name</label>
+        <input type="text" name="name" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Your Email</label>
+        <input type="email" name="email" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Your Message</label>
+        <textarea name="message" rows="5" class="form-control" required></textarea>
+      </div>
+      <!-- Optional honeypot spam protection -->
+      <input type="hidden" name="_honey" style="display:none">
+      <!-- No CAPTCHA -->
+      <input type="hidden" name="_captcha" value="false">
+      <div class="text-center">
+        <button type="submit" class="btn btn-light px-4">Send Message</button>
+      </div>
+    </form>
+  </div>
+</section>
     </div>
   </main>
   <footer class="site-footer py-4 mt-3">
