--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@ JP Creative Works</p>
       <p class="mb-0 small">© 2025 JP Creative Works • Designed & Coded by <a href="https://github.com/jpcreativeworks" target="_blank" class="footer-link me-3">Jenn Bencriscutto</a></p>
   </div>
   </footer>
+  <script src="scripts/contact.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
