web development section to portfolio and styled tiles, still working on no right click

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,85 +37,81 @@
   </nav>
   <header></header>
   <main>
-    <section id="web-dev" class="media-section text-center py-5" style="background-color: #6f42c1;">
-  <div class="container">
-    <img src="/imgs/web_development/Web Development.png" alt="Web Development Logo" class="img-fluid mb-3" style="max-width: 200px;">
-    <h2 class="text-white">Web Development</h2>
+    <section id="web-dev" class="media-section text-center py-4" style="background-color: #6f42c1;">
+      <div class="container text-center py-3">
+        <img src="/imgs/web_development/Web Development.png" alt="Web Development Logo" class="img-fluid mb-2" style="max-width: 200px;">
+        <h2 class="text-white">Web Development</h2>
+      </div>
+    </section>
 
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/Alvernon_donuts.png" alt="Alvernon Donuts" class="img-fluid project-img">
-          <a href="https://alvernondonuts.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+    <section>
+      <div class="light-bg py-4">
+        <div class="container">
+          <div class="row justify-content-center mt-4">
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/Alvernon_donuts.png" alt="Alvernon Donuts" class="img-fluid project-img">
+                <a href="https://alvernondonuts.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/AI Guidelines.png" alt="AI Guidelines for School District" class="img-fluid project-img">
+                <a href="https://ai-guidelines.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/API_Weather_app.png" alt="What's the Weather App" class="img-fluid project-img">
+                <a href="https://wtweatherapp.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+              </div>
+            </div>
+          </div>
+
+            <div class="row justify-content-center mt-4">
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/AI_Affiermations.png" alt="I Am Affirmations with AI" class="img-fluid project-img">
+                <a href="https://iamaiaffirmations.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/Time Globe.png" alt="Time Globe" class="img-fluid project-img">
+                <a href="https://timeglobe-foralltime.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/JPs_feathered_friends.png" alt="JPs Feathered Friends Aviary Website" class="img-fluid project-img">
+                <a href="https://jps-feathered-friends.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+              </div>
+            </div>
+          </div>
+
+              <div class="row justify-content-center mt-4">
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/AI_Python_Travel_Planner.png" alt="Python AI Travel Planner" class="img-fluid project-img">
+                <a href="https://colab.research.google.com/drive/1Uv4CUQXP-vYkCWxVu6Kq5GpGlbJNirT-?usp=sharing" target="_blank" class="overlay-btn">Run Code</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/SheCodes the Weather.png" alt="Shecodes Weather API" class="img-fluid project-img">
+                <a href="https://shecodes-the-weather.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4 project-tile">
+              <div class="tile-wrapper">
+                <img src="/imgs/web_development/COVID_Plot_Graph_Python.png" alt="Global Covid Plot Graph with Python" class="img-fluid project-img">
+                <a href="https://replit.com/@jpcreativeworks/SheCodesFinalProject#main.py" target="_blank" class="overlay-btn">View Code</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/AI Guidelines.png" alt="AI Guidelines for School District" class="img-fluid project-img">
-          <a href="https://ai-guidelines.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/API_Weather_app.png" alt="What's the Weather App" class="img-fluid project-img">
-          <a href="https://wtweatherapp.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/AI_Affiermations.png" alt="I Am Affirmations with AI" class="img-fluid project-img">
-          <a href="https://iamaiaffirmations.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/Time Globe.png" alt="Time Globe" class="img-fluid project-img">
-          <a href="https://timeglobe-foralltime.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/JPs_feathered_friends.png" alt="JPs Feathered Friends Aviary Website" class="img-fluid project-img">
-          <a href="https://jps-feathered-friends.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/AI_Python_Travel_Planner.png" alt="Python AI Travel Planner" class="img-fluid project-img">
-          <a href="https://colab.research.google.com/drive/1Uv4CUQXP-vYkCWxVu6Kq5GpGlbJNirT-?usp=sharing" target="_blank" class="overlay-btn">Run Code</a>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/SheCodes the Weather.png" alt="Shecodes Weather API" class="img-fluid project-img">
-          <a href="https://shecodes-the-weather.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-center mt-4">
-      <div class="col-md-6 col-lg-4 mb-4 project-tile">
-        <div class="tile-wrapper">
-          <img src="/imgs/web_development/COVID_Plot_Graph_Python.png" alt="Global Covid Plot Graph with Python" class="img-fluid project-img">
-          <a href="https://replit.com/@jpcreativeworks/SheCodesFinalProject#main.py" target="_blank" class="overlay-btn">View Code</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
   </main>
   <footer class="site-footer py-4 mt-3">
   <div class="container text-center text-white">
@@ -137,6 +133,7 @@
       <p class="mb-0 small">© 2025 JP Creative Works • Designed & Coded by <a href="https://github.com/jpcreativeworks" target="_blank" class="footer-link me-3">Jenn Bencriscutto</a></p>
   </div>
   </footer>
+  <script src="/scripts/norightclick.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
 </body>
