started started updating with hover feature and providing descriptions for links

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,19 +51,34 @@
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/Alvernon_donuts.png" alt="Alvernon Donuts" class="img-fluid project-img">
-                <a href="https://alvernondonuts.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                <div class="project-overlay">
+                    <p class="project-description"><strong>Alvernon Donuts</strong><br />
+Although this project was submitted as part of my SheCodes curriculum, I chose to go beyond the assignment’s generic guidelines and design a site for a real local business—Alvernon Donuts. The business didn’t have a website, and I saw an opportunity to create something useful while pushing myself to apply real-world thinking. I handled the layout, styling, and responsive development using HTML, CSS, and Bootstrap, focusing on user experience and visual clarity. This project not only helped me fulfill the SheCodes criteria but also allowed me to approach web development from a more authentic, community-centered perspective.</p>
+                    <a href="https://alvernondonuts.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                </div>    
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/AI Guidelines.png" alt="AI Guidelines for School District" class="img-fluid project-img">
-                <a href="https://ai-guidelines.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                <div class="project-overlay">
+                  <p class="project-description"><strong>TUSD AI Guideslines</strong><br />This site redesign project was created as part of Tucson Unified School District’s AI Taskforce. The original page lacked structure and clarity, so I took the initiative to rebuild it with a cleaner layout and unified messaging to better educate staff and families about AI.</p>
+                  <div class="d-flex gap-2 justify-content-center flex-wrap">
+                    <a href="https://ai-guidelines.netlify.app/" target="_blank" class="overlay-btn">View Redesigned Site</a>
+                    <a href="https://www.tusd1.org/ai-guidelines" target="_blank" class="overlay-btn">View Original Site</a>
+                  </div>
                 </div>
+              </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/API_Weather_app.png" alt="What's the Weather App" class="img-fluid project-img">
-                <a href="https://wtweatherapp.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                <div class="project-overlay">
+                  <p class="project-description"><strong>What's The Weather App</strong><br />For this SheCodes assignment, I challenged myself to integrate a third-party API from Weatherbit.io that was beyond what was offered in the curriculum. I also reimagined the typical weather app layout by designing a curved, window-like interface to simulate the experience of looking out at the weather.</p>
+                  <div class="d-flex gap-2 justify-content-center flex-wrap">
+                    <a href="https://wtweatherapp.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -72,19 +87,33 @@
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/AI_Affiermations.png" alt="I Am Affirmations with AI" class="img-fluid project-img">
-                <a href="https://iamaiaffirmations.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                <div class="project-overlay">
+                  <p class="project-description"><strong>I Am Affirmations with AI</strong><br />Built as part of a SheCodes assignment where we were free to apply an AI platform however we chose. I focused on creating an uplifting experience that could make someone’s day better. I structured context and designed clear prompts to implement AI for consistent results, added a typewriter-style animation to deliver affirmations with intention, and selected a calming color palette to support the positive tone.</p>
+                  <div class="d-flex gap-2 justify-content-center flex-wrap"></div>
+                    <a href="https://iamaiaffirmations.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                  </div>
                 </div>
-            </div>
+              </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/Time Globe.png" alt="Time Globe" class="img-fluid project-img">
-                <a href="https://timeglobe-foralltime.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                <div class="project-overlay">
+                  <p class="project-description"><strong>Time Globe</strong><br />Time Globe was a focused JavaScript project designed to display live, location-specific time across multiple cities. I implemented both moment.js and moment-timezone to handle real-time updates and international time zones. My biggest challenge was integrating the dynamic time updates with user interaction, but solving it helped sharpen my understanding of asynchronous behavior in JavaScript and DOM manipulation. The sleek, responsive interface also reflects my dedication to clean, functional design.</p>
+                  <div class="d-flex gap-2 justify-content-center flex-wrap">
+                    <a href="https://timeglobe-foralltime.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/JPs_feathered_friends.png" alt="JPs Feathered Friends Aviary Website" class="img-fluid project-img">
-                <a href="https://jps-feathered-friends.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                <div class="project-overlay">
+                  <p class="project-description"><strong>JP's Feather Friends</strong><br />This is a passion project turned professional site, built to support my aviary business and showcase my creative coding style. I designed a fully responsive layout that works seamlessly across devices and implemented SEO best practices to help the site perform well in search engines. The site also features original vector artwork of my Green Cheek Conures, Sherbert and Einstein, created in Adobe Illustrator to give the brand a playful and personal touch.</p>
+                  <div class="d-flex gap-2 justify-content-center flex-wrap">
+                    <a href="https://jps-feathered-friends.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -93,7 +122,9 @@
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/AI_Python_Travel_Planner.png" alt="Python AI Travel Planner" class="img-fluid project-img">
-                <a href="https://colab.research.google.com/drive/1Uv4CUQXP-vYkCWxVu6Kq5GpGlbJNirT-?usp=sharing" target="_blank" class="overlay-btn">Run Code</a>
+                <div class="d-flex gap-2 justify-content-center flex-wrap">
+                  <a href="https://colab.research.google.com/drive/1Uv4CUQXP-vYkCWxVu6Kq5GpGlbJNirT-?usp=sharing" target="_blank" class="overlay-btn">Run Code</a>
+                </div>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
