finished updating portofolio web dev descriptions for final three websites.

--- a/portfolio.html
+++ b/portfolio.html
@@ -118,25 +118,38 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
             </div>
           </div>
 
-              <div class="row justify-content-center mt-4">
+          <div class="row justify-content-center mt-4">
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/AI_Python_Travel_Planner.png" alt="Python AI Travel Planner" class="img-fluid project-img">
-                <div class="d-flex gap-2 justify-content-center flex-wrap">
-                  <a href="https://colab.research.google.com/drive/1Uv4CUQXP-vYkCWxVu6Kq5GpGlbJNirT-?usp=sharing" target="_blank" class="overlay-btn">Run Code</a>
+                <div class="project-overlay">
+                  <p class="project-description"><strong>AI Travel Planner</strong><br />AI Travel Planner was developed in Google Colab using Python and SheCodes AI integration. The project generates a personalized travel itinerary based on user responses, including destination, dates, and budget, and returns estimated costs, weather, and transportation options. Users interact with the notebook by clicking “Run” and answering prompts. One key challenge was ensuring consistency across a wide range of destinations. This project strengthened my skills in Python and deepened my interest in using code to solve real-world problems.</p>
+                  <div class="d-flex gap-2 justify-content-center flex-wrap">
+                    <a href="https://colab.research.google.com/drive/1Uv4CUQXP-vYkCWxVu6Kq5GpGlbJNirT-?usp=sharing" target="_blank" class="overlay-btn">Run Code</a>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/SheCodes the Weather.png" alt="Shecodes Weather API" class="img-fluid project-img">
-                <a href="https://shecodes-the-weather.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                <div class="project-overlay">
+                  <p class="project-description"><strong>SheCodes Weather App</strong><br />This was my first major weather API project using HTML, CSS, and JavaScript. I customized it to shift colors at sunrise and sunset, adding a unique user experience beyond the basic template. This project deepened my skills in API integration and time-based styling.</p>
+                  <div class="d-flex gap-2 justify-content-center flex-wrap">
+                    <a href="https://shecodes-the-weather.netlify.app/" target="_blank" class="overlay-btn">View Site</a>
+                  </div>
                 </div>
+              </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-4 project-tile">
               <div class="tile-wrapper">
                 <img src="/imgs/web_development/COVID_Plot_Graph_Python.png" alt="Global Covid Plot Graph with Python" class="img-fluid project-img">
-                <a href="https://replit.com/@jpcreativeworks/SheCodesFinalProject#main.py" target="_blank" class="overlay-btn">View Code</a>
+                <div class="project-overlay">
+                <p class="project-description"><strong>Global COVID Plot Graph</strong><br />a Python project hosted on Replit, where I gathered and analyzed global COVID-19 data. I used Python’s plotting libraries to visualize the data and highlight international trends. Users can run the script and view the results in a separate console window. This project reflects my interest in meaningful data storytelling and using Python for real-world impact.</p>
+                <div class="d-flex gap-2 justify-content-center flex-wrap">
+                  <a href="https://replit.com/@jpcreativeworks/SheCodesFinalProject#main.py" target="_blank" class="overlay-btn">Run Code</a>
+                </div>
+                </div>
               </div>
             </div>
           </div>
