added portfolio intro with resume pdf downlaod to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,21 @@
   <main>
     <section id="web-dev" class="media-section text-center py-4" style="background-color: #6f42c1;">
       <div class="container text-center py-3">
+        <img src="/imgs/portfolio.png" alt="JP Creative Works Portfolio" class="img-fluid mb-3" style="max-width: 200px;">
+        <h1 class="mb-3" style="color: #ffffff">My Portfolio</h1>
+      </div>
+    </section>
+    <section class="light-bg py-5">
+        <p class="lead mx-auto" style="max-width: 800px;">
+          Welcome to my portfolio! This section highlights my web development projects where I’ve applied a range of tools like HTML, CSS, JavaScript, and Bootstrap, often going beyond the original scope to create something more purposeful and user-centered. I'm currently in the process of building out dedicated sections for my <strong>graphic design, videography, and photography</strong> work, so stay tuned!
+        </p>
+        <div class="d-flex justify-content-center">
+          <a href="/imgs/Resume_Bencriscutto.pdf" target="_blank" class="btn btn-outline-primary mt-3 resume-btn"><i class="bi bi-download me-2"></i>View My Resume
+          </a>
+        </div>
+    </section>
+    <section id="web-dev" class="media-section text-center py-4" style="background-color: #6f42c1;">
+      <div class="container text-center py-3">
         <img src="/imgs/web_development/Web Development.png" alt="Web Development Logo" class="img-fluid mb-2" style="max-width: 200px;">
         <h2 class="text-white">Web Development</h2>
       </div>
