uploaded Videos, created video player, and overlay js

--- a/portfolio.html
+++ b/portfolio.html
@@ -171,6 +171,74 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
         </div>
       </div>
     </section>
+    <section id="video" class="media-section text-center py-4" style="background-color: #6f42c1;">
+      <div class="container text-center py-3">
+        <img src="/imgs/video/videography.png" alt="Videography Logo" class="img-fluid mb-2" style="max-width: 200px;">
+        <h2 class="text-white">Videography</h2>
+      </div>
+    </section>
+    <section>
+      <div class="light-bg py-4">
+        <div class="container">
+          <div class="row justify-content-center mt-4">
+
+      <!-- Video 1 -->
+      <div class="col-md-6 col-lg-4 mb-4 project-tile">
+        <div class="tile-wrapper">
+          <video class="project-video" poster="/imgs/video/freedom sc.PNG" controls>
+            <source src="/imgs/video/Freedom_1.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+          </video>
+          <div class="project-overlay">
+            <div class="overlay-content">
+              <p class="project-description">
+              <strong>Project Signed: Freedom</strong><br>
+                An artistic ASL interpretation of “Freedom” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Andrew Tolman, with choreography by Divine. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
+              </p>
+              <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Video 2 -->
+      <div class="col-md-6 col-lg-4 mb-4 project-tile">
+        <div class="tile-wrapper">
+          <video class="project-video" poster="/imgs/video/IMG_3475.PNG" controls>
+            <source src="/imgs/video/Formation_1.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+          </video>
+          <div class="project-overlay">
+            <div class="overlay-content">
+              <p class="project-description">
+              <strong>Project Signed: Freedom</strong><br>
+                An artistic ASL interpretation of “Formation” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
+              </p>
+              <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Video 3 -->
+      <div class="col-md-6 col-lg-4 mb-4 project-tile">
+        <div class="tile-wrapper">
+          <video class="project-video" poster="/imgs/video/forward sc.PNG" controls>
+            <source src="/imgs/video/Forward 3_1.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+          </video>
+          <div class="project-overlay">
+            <div class="overlay-content">
+              <p class="project-description">
+              <strong>Project Signed: Freedom</strong><br>
+                An artistic ASL interpretation of “Forward” by Beyoncé Knowles, performed in American Sign Language by Lauren Tolo and Cornelious Poston. Video direction, filming, and editing were completed by me as part of <em>Project Signed</em>, a creative visual album inspired by Beyoncé’s <em>Lemonade</em>. This is a tribute project and I do not claim ownership of the audio. All rights to the music and lyrics belong to the original artist and copyright holders.
+              </p>
+              <button class="overlay-btn" onclick="playVideo(this)">Play Video</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
   </main>
   <footer class="site-footer py-4 mt-3">
   <div class="container text-center text-white">
@@ -192,6 +260,7 @@ Although this project was submitted as part of my SheCodes curriculum, I chose t
       <p class="mb-0 small">© 2025 JP Creative Works • Designed & Coded by <a href="https://github.com/jpcreativeworks" target="_blank" class="footer-link me-3">Jenn Bencriscutto</a></p>
   </div>
   </footer>
+  <script src="/scripts/videoOverlay.js"></script>
   <script src="/scripts/norightclick.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 
